Add weather card styling

--- a/index.html
+++ b/index.html
@@ -2,115 +2,133 @@
 <html>
 <head>
 	<title>Weather App</title>
+	<meta charset="utf-8">
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<link href="https://fonts.googleapis.com/css?family=Comfortaa|Open+Sans" rel="stylesheet">
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
 </head>
 <body>
 		<h1>Weekly Forecast:</h1>
 		<label for="input" class="input">
 		  <input type="text" id="input" placeholder="&nbsp;">
-		  <span class="label">Label</span>
+		  <span class="label">Search</span>
 		  <span class="border"></span>
 		</label>
-		<div class="forecastSummary">
-			<div class="weather-card">
-				<div class="tempatures">
-					<span class="high">H: 50</span>
-					<span class="low">L: 30</span>
+		<div class="blurred-box">
+			<div class="forecastSummary">
+				<div class="weather-card">
+					<div class="red-dot"></div>
+					<div class="blue-dot"></div>
+					<div class="tempatures">
+						<span class="high">50°</span>
+						<span class="low">30°</span>
+					</div>
+					<div class="icon">
+						<img src="http://icons.iconarchive.com/icons/papirus-team/papirus-apps/256/weather-icon.png">
+					</div>
+					<div class="status">
+						<h2>Monday</h2>
+						<p>Raining</p>
+					</div>
 				</div>
-				<div class="icon">
-					<img src="http://icons.iconarchive.com/icons/papirus-team/papirus-apps/256/weather-icon.png">
-				</div>
-				<div class="status">
-					<h2>Monday</h2>
-					<p>Raining</p>
-				</div>
-			</div>
 
-			<div class="weather-card">
-				<div class="tempatures">
-					<span class="high">H: 50</span>
-					<span class="low">L: 30</span>
+				<div class="weather-card">
+					<div class="red-dot"></div>
+					<div class="blue-dot"></div>
+					<div class="tempatures">
+						<span class="high">50°</span>
+						<span class="low">30°</span>
+					</div>
+					<div class="icon">
+						<img src="http://icons.iconarchive.com/icons/papirus-team/papirus-apps/256/weather-icon.png">
+					</div>
+					<div class="status">
+						<h2>Tuesday</h2>
+						<p>Raining</p>
+					</div>
 				</div>
-				<div class="icon">
-					<img src="http://icons.iconarchive.com/icons/papirus-team/papirus-apps/256/weather-icon.png">
-				</div>
-				<div class="status">
-					<h2>Tuesday</h2>
-					<p>Raining</p>
-				</div>
-			</div>
 
-			<div class="weather-card">
-				<div class="tempatures">
-					<span class="high">H: 50</span>
-					<span class="low">L: 30</span>
+				<div class="weather-card">
+					<div class="tempatures">
+					<div class="red-dot"></div>
+					<div class="blue-dot"></div>
+						<span class="high">50°</span>
+						<span class="low">30°</span>
+					</div>
+					<div class="icon">
+						<img src="http://icons.iconarchive.com/icons/papirus-team/papirus-apps/256/weather-icon.png">
+					</div>
+					<div class="status">
+						<h2>Wednesday</h2>
+						<p>Raining</p>
+					</div>
 				</div>
-				<div class="icon">
-					<img src="http://icons.iconarchive.com/icons/papirus-team/papirus-apps/256/weather-icon.png">
-				</div>
-				<div class="status">
-					<h2>Wednesday</h2>
-					<p>Raining</p>
-				</div>
-			</div>
 
-			<div class="weather-card">
-				<div class="tempatures">
-					<span class="high">H: 50</span>
-					<span class="low">L: 30</span>
+				<div class="weather-card">
+					<div class="tempatures">
+					<div class="red-dot"></div>
+					<div class="blue-dot"></div>
+						<span class="high">50°</span>
+						<span class="low">30°</span>
+					</div>
+					<div class="icon">
+						<img src="http://icons.iconarchive.com/icons/papirus-team/papirus-apps/256/weather-icon.png">
+					</div>
+					<div class="status">
+						<h2>Thursday</h2>
+						<p>Raining</p>
+					</div>
 				</div>
-				<div class="icon">
-					<img src="http://icons.iconarchive.com/icons/papirus-team/papirus-apps/256/weather-icon.png">
-				</div>
-				<div class="status">
-					<h2>Thursday</h2>
-					<p>Raining</p>
-				</div>
-			</div>
 
-			<div class="weather-card">
-				<div class="tempatures">
-					<span class="high">H: 50</span>
-					<span class="low">L: 30</span>
+				<div class="weather-card">
+					<div class="tempatures">
+					<div class="red-dot"></div>
+					<div class="blue-dot"></div>
+						<span class="high">50°</span>
+						<span class="low">30°</span>
+					</div>
+					<div class="icon">
+						<img src="http://icons.iconarchive.com/icons/papirus-team/papirus-apps/256/weather-icon.png">
+					</div>
+					<div class="status">
+						<h2>Friday</h2>
+						<p>Raining</p>
+					</div>
 				</div>
-				<div class="icon">
-					<img src="http://icons.iconarchive.com/icons/papirus-team/papirus-apps/256/weather-icon.png">
-				</div>
-				<div class="status">
-					<h2>Friday</h2>
-					<p>Raining</p>
-				</div>
-			</div>
 
-			<div class="weather-card">
-				<div class="tempatures">
-					<span class="high">H: 50</span>
-					<span class="low">L: 30</span>
+				<div class="weather-card">
+					<div class="tempatures">
+					<div class="red-dot"></div>
+					<div class="blue-dot"></div>
+						<span class="high">50°</span>
+						<span class="low">30°</span>
+					</div>
+					<div class="icon">
+						<img src="http://icons.iconarchive.com/icons/papirus-team/papirus-apps/256/weather-icon.png">
+					</div>
+					<div class="status">
+						<h2>Saturday</h2>
+						<p>Raining</p>
+					</div>
 				</div>
-				<div class="icon">
-					<img src="http://icons.iconarchive.com/icons/papirus-team/papirus-apps/256/weather-icon.png">
-				</div>
-				<div class="status">
-					<h2>Saturday</h2>
-					<p>Raining</p>
-				</div>
-			</div>
 
-			<div class="weather-card">
-				<div class="tempatures">
-					<span class="high">H: 50</span>
-					<span class="low">L: 30</span>
-				</div>
-				<div class="icon">
-					<img src="http://icons.iconarchive.com/icons/papirus-team/papirus-apps/256/weather-icon.png">
-				</div>
-				<div class="status">
-					<h2>Sunday</h2>
-					<p>Raining</p>
+				<div class="weather-card">
+					<div class="tempatures">
+					<div class="red-dot"></div>
+					<div class="blue-dot"></div>
+						<span class="high">50°</span>
+						<span class="low">30°</span>
+					</div>
+					<div class="icon">
+						<img src="http://icons.iconarchive.com/icons/papirus-team/papirus-apps/256/weather-icon.png">
+					</div>
+					<div class="status">
+						<h2>Sunday</h2>
+						<p>Raining</p>
+					</div>
 				</div>
 			</div>
-			
 		</div>
+<div>Icons made by <a href="https://www.flaticon.com/authors/dave-gandy" title="Dave Gandy">Dave Gandy</a> from <a href="https://www.flaticon.com/" 			    title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" 			    title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div>
 </body>
 </html>
