Add functions to pull and format most data. Reduced forecast to 5 days.

--- a/index.html
+++ b/index.html
@@ -26,12 +26,12 @@
 						<span class="high">50°</span>
 						<span class="low">30°</span>
 					</div>
-					<div class="icon">
-						<img src="http://icons.iconarchive.com/icons/papirus-team/papirus-apps/256/weather-icon.png">
+						<img class="icon" src="http://icons.iconarchive.com/icons/papirus-team/papirus-apps/256/weather-icon.png">
+					<div>
 					</div>
-					<div class="status">
-						<h2>Monday</h2>
-						<p>Raining</p>
+					<div>
+						<h2 class="weekday">----</h2>
+						<p class="weather-text">Raining</p>
 					</div>
 				</div>
 
@@ -42,28 +42,12 @@
 						<span class="high">50°</span>
 						<span class="low">30°</span>
 					</div>
-					<div class="icon">
-						<img src="http://icons.iconarchive.com/icons/papirus-team/papirus-apps/256/weather-icon.png">
+						<img class="icon" src="http://icons.iconarchive.com/icons/papirus-team/papirus-apps/256/weather-icon.png">
+					<div>
 					</div>
-					<div class="status">
-						<h2>Tuesday</h2>
-						<p>Raining</p>
-					</div>
-				</div>
-
-				<div class="weather-card">
-					<div class="tempatures">
-					<div class="red-dot"></div>
-					<div class="blue-dot"></div>
-						<span class="high">50°</span>
-						<span class="low">30°</span>
-					</div>
-					<div class="icon">
-						<img src="http://icons.iconarchive.com/icons/papirus-team/papirus-apps/256/weather-icon.png">
-					</div>
-					<div class="status">
-						<h2>Wednesday</h2>
-						<p>Raining</p>
+					<div>
+						<h2 class="weekday">----</h2>
+						<p class="weather-text">Raining</p>
 					</div>
 				</div>
 
@@ -74,28 +58,12 @@
 						<span class="high">50°</span>
 						<span class="low">30°</span>
 					</div>
-					<div class="icon">
-						<img src="http://icons.iconarchive.com/icons/papirus-team/papirus-apps/256/weather-icon.png">
+						<img class="icon" src="http://icons.iconarchive.com/icons/papirus-team/papirus-apps/256/weather-icon.png">
+					<div>
 					</div>
-					<div class="status">
-						<h2>Thursday</h2>
-						<p>Raining</p>
-					</div>
-				</div>
-
-				<div class="weather-card">
-					<div class="tempatures">
-					<div class="red-dot"></div>
-					<div class="blue-dot"></div>
-						<span class="high">50°</span>
-						<span class="low">30°</span>
-					</div>
-					<div class="icon">
-						<img src="http://icons.iconarchive.com/icons/papirus-team/papirus-apps/256/weather-icon.png">
-					</div>
-					<div class="status">
-						<h2>Friday</h2>
-						<p>Raining</p>
+					<div>
+						<h2 class="weekday">----</h2>
+						<p class="weather-text">Raining</p>
 					</div>
 				</div>
 
@@ -106,12 +74,12 @@
 						<span class="high">50°</span>
 						<span class="low">30°</span>
 					</div>
-					<div class="icon">
-						<img src="http://icons.iconarchive.com/icons/papirus-team/papirus-apps/256/weather-icon.png">
+						<img class="icon" src="http://icons.iconarchive.com/icons/papirus-team/papirus-apps/256/weather-icon.png">
+					<div>
 					</div>
-					<div class="status">
-						<h2>Saturday</h2>
-						<p>Raining</p>
+					<div>
+						<h2 class="weekday">----</h2>
+						<p class="weather-text">Raining</p>
 					</div>
 				</div>
 
@@ -122,14 +90,46 @@
 						<span class="high">50°</span>
 						<span class="low">30°</span>
 					</div>
-					<div class="icon">
-						<img src="http://icons.iconarchive.com/icons/papirus-team/papirus-apps/256/weather-icon.png">
+						<img class="icon" src="http://icons.iconarchive.com/icons/papirus-team/papirus-apps/256/weather-icon.png">
+					<div>
 					</div>
-					<div class="status">
-						<h2>Sunday</h2>
-						<p>Raining</p>
+					<div>
+						<h2 class="weekday">----</h2>
+						<p class="weather-text">Raining</p>
 					</div>
 				</div>
+
+<!-- 				<div class="weather-card">
+					<div class="tempatures">
+					<div class="red-dot"></div>
+					<div class="blue-dot"></div>
+						<span class="high">50°</span>
+						<span class="low">30°</span>
+					</div>
+						<img class="icon" src="http://icons.iconarchive.com/icons/papirus-team/papirus-apps/256/weather-icon.png">
+					<div>
+					</div>
+					<div>
+						<h2 class="weekday">----</h2>
+						<p class="weather-text">Raining</p>
+					</div>
+				</div>
+
+				<div class="weather-card">
+					<div class="tempatures">
+					<div class="red-dot"></div>
+					<div class="blue-dot"></div>
+						<span class="high">50°</span>
+						<span class="low">30°</span>
+					</div>
+						<img class="icon" src="http://icons.iconarchive.com/icons/papirus-team/papirus-apps/256/weather-icon.png">
+					<div>
+					</div>
+					<div>
+						<h2 class="weekday">----</h2>
+						<p class="weather-text">Raining</p>
+					</div>
+				</div> -->
 			</div>
 		</div>
 		<p class="display"></p>
