Replace imgs with icons. Link icons to weather status. Fix issue if API does not pull current day

--- a/index.html
+++ b/index.html
@@ -3,16 +3,17 @@
 <head>
 	<meta charset="utf-8">
 	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/weather-icons/2.0.9/css/weather-icons.min.css">
 	<link href="https://fonts.googleapis.com/css?family=Comfortaa|Open+Sans" rel="stylesheet">
 	<title>Weather App</title>
 </head>
 <body>
-		<h1 class="jello-vertical">Weekly Forecast:</h1>
+		<h1 class="jello-vertical">5 Day Forecast:</h1>
 			<label for="input" class="input">
 			<!-- I know the label tag should go inside the form tag
 			but this lets me keep CSS simpler. (: -->
 			<form onsubmit="return getInfo()">
-			  <input type="text" id="input" placeholder="&nbsp;">
+			  <input type="text" id="search" placeholder="&nbsp;">
 			  <span class="label">Search</span>
 			  <span class="border"></span>
 			</form>
@@ -26,7 +27,7 @@
 						<span class="high">50°</span>
 						<span class="low">30°</span>
 					</div>
-						<img class="icon" src="http://icons.iconarchive.com/icons/papirus-team/papirus-apps/256/weather-icon.png">
+						<i class=""></i>
 					<div>
 					</div>
 					<div>
@@ -42,7 +43,7 @@
 						<span class="high">50°</span>
 						<span class="low">30°</span>
 					</div>
-						<img class="icon" src="http://icons.iconarchive.com/icons/papirus-team/papirus-apps/256/weather-icon.png">
+						<i class=""></i>
 					<div>
 					</div>
 					<div>
@@ -58,7 +59,7 @@
 						<span class="high">50°</span>
 						<span class="low">30°</span>
 					</div>
-						<img class="icon" src="http://icons.iconarchive.com/icons/papirus-team/papirus-apps/256/weather-icon.png">
+						<i class=""></i>
 					<div>
 					</div>
 					<div>
@@ -74,7 +75,7 @@
 						<span class="high">50°</span>
 						<span class="low">30°</span>
 					</div>
-						<img class="icon" src="http://icons.iconarchive.com/icons/papirus-team/papirus-apps/256/weather-icon.png">
+						<i class=""></i>
 					<div>
 					</div>
 					<div>
@@ -90,7 +91,7 @@
 						<span class="high">50°</span>
 						<span class="low">30°</span>
 					</div>
-						<img class="icon" src="http://icons.iconarchive.com/icons/papirus-team/papirus-apps/256/weather-icon.png">
+						<i class=""></i>
 					<div>
 					</div>
 					<div>
@@ -106,7 +107,7 @@
 						<span class="high">50°</span>
 						<span class="low">30°</span>
 					</div>
-						<img class="icon" src="http://icons.iconarchive.com/icons/papirus-team/papirus-apps/256/weather-icon.png">
+						<i class=""></i>
 					<div>
 					</div>
 					<div>
@@ -122,7 +123,7 @@
 						<span class="high">50°</span>
 						<span class="low">30°</span>
 					</div>
-						<img class="icon" src="http://icons.iconarchive.com/icons/papirus-team/papirus-apps/256/weather-icon.png">
+						<i class=""></i>
 					<div>
 					</div>
 					<div>
