Change icon color. Make h1 anim replay on search. Remove unnecessary div.

--- a/index.html
+++ b/index.html
@@ -18,120 +18,120 @@
 			  <span class="border"></span>
 			</form>
 			</label>
-		<div class="blurred-box">
-			<div class="forecastSummary">
-				<div class="weather-card">
-					<div class="red-dot"></div>
-					<div class="blue-dot"></div>
-					<div class="tempatures">
-						<span class="high">50°</span>
-						<span class="low">30°</span>
-					</div>
-						<i class=""></i>
-					<div>
-					</div>
-					<div>
-						<h2 class="weekday">----</h2>
-						<p class="weather-text">Raining</p>
-					</div>
+		<p class="help-text">Must search in the following format: {City}, {Country}.</p>
+		<p class="help-text">Example: Chapel Hill, US</p>
+		<div class="forecast-summary">
+			<div class="weather-card">
+				<div class="red-dot"></div>
+				<div class="blue-dot"></div>
+				<div class="tempatures">
+					<span class="high">50°</span>
+					<span class="low">30°</span>
 				</div>
+					<i class=""></i>
+				<div>
+				</div>
+				<div>
+					<h2 class="weekday">----</h2>
+					<p class="weather-text">Raining</p>
+				</div>
+			</div>
 
-				<div class="weather-card">
-					<div class="red-dot"></div>
-					<div class="blue-dot"></div>
-					<div class="tempatures">
-						<span class="high">50°</span>
-						<span class="low">30°</span>
-					</div>
-						<i class=""></i>
-					<div>
-					</div>
-					<div>
-						<h2 class="weekday">----</h2>
-						<p class="weather-text">Raining</p>
-					</div>
+			<div class="weather-card">
+				<div class="red-dot"></div>
+				<div class="blue-dot"></div>
+				<div class="tempatures">
+					<span class="high">50°</span>
+					<span class="low">30°</span>
 				</div>
+					<i class=""></i>
+				<div>
+				</div>
+				<div>
+					<h2 class="weekday">----</h2>
+					<p class="weather-text">Raining</p>
+				</div>
+			</div>
 
-				<div class="weather-card">
-					<div class="tempatures">
-					<div class="red-dot"></div>
-					<div class="blue-dot"></div>
-						<span class="high">50°</span>
-						<span class="low">30°</span>
-					</div>
-						<i class=""></i>
-					<div>
-					</div>
-					<div>
-						<h2 class="weekday">----</h2>
-						<p class="weather-text">Raining</p>
-					</div>
+			<div class="weather-card">
+				<div class="tempatures">
+				<div class="red-dot"></div>
+				<div class="blue-dot"></div>
+					<span class="high">50°</span>
+					<span class="low">30°</span>
 				</div>
+					<i class=""></i>
+				<div>
+				</div>
+				<div>
+					<h2 class="weekday">----</h2>
+					<p class="weather-text">Raining</p>
+				</div>
+			</div>
 
-				<div class="weather-card">
-					<div class="tempatures">
-					<div class="red-dot"></div>
-					<div class="blue-dot"></div>
-						<span class="high">50°</span>
-						<span class="low">30°</span>
-					</div>
-						<i class=""></i>
-					<div>
-					</div>
-					<div>
-						<h2 class="weekday">----</h2>
-						<p class="weather-text">Raining</p>
-					</div>
+			<div class="weather-card">
+				<div class="tempatures">
+				<div class="red-dot"></div>
+				<div class="blue-dot"></div>
+					<span class="high">50°</span>
+					<span class="low">30°</span>
 				</div>
+					<i class=""></i>
+				<div>
+				</div>
+				<div>
+					<h2 class="weekday">----</h2>
+					<p class="weather-text">Raining</p>
+				</div>
+			</div>
 
-				<div class="weather-card">
-					<div class="tempatures">
-					<div class="red-dot"></div>
-					<div class="blue-dot"></div>
-						<span class="high">50°</span>
-						<span class="low">30°</span>
-					</div>
-						<i class=""></i>
-					<div>
-					</div>
-					<div>
-						<h2 class="weekday">----</h2>
-						<p class="weather-text">Raining</p>
-					</div>
+			<div class="weather-card">
+				<div class="tempatures">
+				<div class="red-dot"></div>
+				<div class="blue-dot"></div>
+					<span class="high">50°</span>
+					<span class="low">30°</span>
 				</div>
+					<i class=""></i>
+				<div>
+				</div>
+				<div>
+					<h2 class="weekday">----</h2>
+					<p class="weather-text">Raining</p>
+				</div>
+			</div>
 
 <!-- 				<div class="weather-card">
-					<div class="tempatures">
-					<div class="red-dot"></div>
-					<div class="blue-dot"></div>
-						<span class="high">50°</span>
-						<span class="low">30°</span>
-					</div>
-						<i class=""></i>
-					<div>
-					</div>
-					<div>
-						<h2 class="weekday">----</h2>
-						<p class="weather-text">Raining</p>
-					</div>
+				<div class="tempatures">
+				<div class="red-dot"></div>
+				<div class="blue-dot"></div>
+					<span class="high">50°</span>
+					<span class="low">30°</span>
 				</div>
-
-				<div class="weather-card">
-					<div class="tempatures">
-					<div class="red-dot"></div>
-					<div class="blue-dot"></div>
-						<span class="high">50°</span>
-						<span class="low">30°</span>
-					</div>
-						<i class=""></i>
-					<div>
-					</div>
-					<div>
-						<h2 class="weekday">----</h2>
-						<p class="weather-text">Raining</p>
-					</div>
-				</div> -->
+					<i class=""></i>
+				<div>
+				</div>
+				<div>
+					<h2 class="weekday">----</h2>
+					<p class="weather-text">Raining</p>
+				</div>
 			</div>
+
+			<div class="weather-card">
+				<div class="tempatures">
+				<div class="red-dot"></div>
+				<div class="blue-dot"></div>
+					<span class="high">50°</span>
+					<span class="low">30°</span>
+				</div>
+					<i class=""></i>
+				<div>
+				</div>
+				<div>
+					<h2 class="weekday">----</h2>
+					<p class="weather-text">Raining</p>
+				</div>
+			</div> -->
 		</div>
 		<p class="display"></p>
 <!-- <div>Icons made by <a href="https://www.flaticon.com/authors/dave-gandy" title="Dave Gandy">Dave Gandy</a> from <a href="https://www.flaticon.com/" 			    title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" 			    title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div> -->
