App now responsive for mobile devices

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<title>Weather App</title>
 </head>
 <body>
-		<h1 class="jello-vertical">5 Day Forecast:</h1>
+		<h1 class="jello-vertical">5 Day Weather Forecast:</h1>
 			<label for="input" class="input">
 			<!-- I know the label tag should go inside the form tag
 			but this lets me keep CSS simpler. (: -->
@@ -25,15 +25,15 @@
 				<div class="red-dot"></div>
 				<div class="blue-dot"></div>
 				<div class="tempatures">
-					<span class="high">50°</span>
-					<span class="low">30°</span>
+					<span class="high">--°</span>
+					<span class="low">--°</span>
 				</div>
 					<i class=""></i>
 				<div>
 				</div>
 				<div>
 					<h2 class="weekday">----</h2>
-					<p class="weather-text">Raining</p>
+					<p class="weather-text">---</p>
 				</div>
 			</div>
 
@@ -41,15 +41,15 @@
 				<div class="red-dot"></div>
 				<div class="blue-dot"></div>
 				<div class="tempatures">
-					<span class="high">50°</span>
-					<span class="low">30°</span>
+					<span class="high">--°</span>
+					<span class="low">--°</span>
 				</div>
 					<i class=""></i>
 				<div>
 				</div>
 				<div>
 					<h2 class="weekday">----</h2>
-					<p class="weather-text">Raining</p>
+					<p class="weather-text">---</p>
 				</div>
 			</div>
 
@@ -57,15 +57,15 @@
 				<div class="tempatures">
 				<div class="red-dot"></div>
 				<div class="blue-dot"></div>
-					<span class="high">50°</span>
-					<span class="low">30°</span>
+					<span class="high">--°</span>
+					<span class="low">--°</span>
 				</div>
 					<i class=""></i>
 				<div>
 				</div>
 				<div>
 					<h2 class="weekday">----</h2>
-					<p class="weather-text">Raining</p>
+					<p class="weather-text">---</p>
 				</div>
 			</div>
 
@@ -73,15 +73,15 @@
 				<div class="tempatures">
 				<div class="red-dot"></div>
 				<div class="blue-dot"></div>
-					<span class="high">50°</span>
-					<span class="low">30°</span>
+					<span class="high">--°</span>
+					<span class="low">--°</span>
 				</div>
 					<i class=""></i>
 				<div>
 				</div>
 				<div>
 					<h2 class="weekday">----</h2>
-					<p class="weather-text">Raining</p>
+					<p class="weather-text">---</p>
 				</div>
 			</div>
 
@@ -89,15 +89,15 @@
 				<div class="tempatures">
 				<div class="red-dot"></div>
 				<div class="blue-dot"></div>
-					<span class="high">50°</span>
-					<span class="low">30°</span>
+					<span class="high">--°</span>
+					<span class="low">--°</span>
 				</div>
 					<i class=""></i>
 				<div>
 				</div>
 				<div>
 					<h2 class="weekday">----</h2>
-					<p class="weather-text">Raining</p>
+					<p class="weather-text">---</p>
 				</div>
 			</div>
 
